--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "native-base": "^2.7.2",
     "react": "16.4.1",
