--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-native": "0.56.0",
     "react-native-elements": "^0.19.1",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-vector-icons": "^5.0.0"
+    "react-native-vector-icons": "^5.0.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
